Add Header & About section & Portfolio & Contact

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Cole Challand - Software Engineer</title>
+    <title>Cole Challand</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -56,8 +56,8 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <h1 class="brand-heading">Cole Challand - Software Engingeer</h1>
-              <p class="intro-text">A free, responsive, one page Bootstrap theme.
-                <br>Created by Start Bootstrap.</p>
+              <p class="intro-text">A full stack developer, primary back end development.
+                <br>C++, Python, Ruby, and Rails programmer</p>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
               </a>
@@ -72,14 +72,16 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>About Grayscale</h2>
-            <p>Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-            <p>This theme features stock photos by
-              <a href="http://gratisography.com/">Gratisography</a>
-              along with a custom Google Maps skin courtesy of
-              <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-            <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with SASS and LESS files for easy customization!</p>
+            <h2>About Cole Challand</h2>
+            <p>I've been fascinated with technology ever since I was able to remember. 
+              I started building computers when I was 12 years old, which lead to my interest in programming. 
+              I went to the University of Denver to study computer engineering. 
+              Then transfered to the University of Colorado for electrical engineering. 
+              While I was school, I realized that programming was in high demand and would need to get into the industry before it was to late.</p>
+            <p>I'm attending Actualize's bootcamp for coding to shapen my skills and how to apply my skills in a business environment. 
+              I hope to translate the knowledge I learned to a career that I can express my creativity.
+              My goal is to become an excellent software developer to harmonize electronics with a simple interface.</p>
+            <p>I'm looking to prave a career path that will resualt in programming autonomous products to increase efficiency in daliy tasks.</p>
           </div>
         </div>
       </div>
@@ -89,9 +91,9 @@
     <section id="download" class="download-section content-section text-center">
       <div class="container">
         <div class="col-lg-8 mx-auto">
-          <h2>Download Grayscale</h2>
-          <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-          <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+          <h2>Portfolio</h2>
+          <p>You can access my portfolio here</p>
+          <a href="https://github.com/CChalland" class="btn btn-default btn-lg">Programming Projects</a>
         </div>
       </div>
     </section>
@@ -101,27 +103,25 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Contact Start Bootstrap</h2>
-            <p>Feel free to leave us a comment on the
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">Grayscale template overview page</a>
-              on Start Bootstrap to give some feedback about this theme!</p>
+            <h2>Contact Cole Challand</h2>
+            <p>Feel free to contact me at the following sites.</p>
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
-                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
-                  <i class="fa fa-twitter fa-fw"></i>
-                  <span class="network-name">Twitter</span>
+                <a href="https://www.linkedin.com/in/cole-challand/" class="btn btn-default btn-lg">
+                  <i class="fa fa-linkedin fa-fw"></i>
+                  <span class="network-name">Linkedin</span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://github.com/BlackrockDigital/startbootstrap" class="btn btn-default btn-lg">
+                <a href="https://github.com/CChalland" class="btn btn-default btn-lg">
                   <i class="fa fa-github fa-fw"></i>
                   <span class="network-name">Github</span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg">
-                  <i class="fa fa-google-plus fa-fw"></i>
-                  <span class="network-name">Google+</span>
+                <a href="https://medium.com/@ctchalland" class="btn btn-default btn-lg">
+                  <i class="fa fa-medium fa-fw"></i>
+                  <span class="network-name">Medium</span>
                 </a>
               </li>
             </ul>
