--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h1 class="brand-heading">Cole Challand - Software Engingeer</h1>
+              <h1 class="brand-heading">Cole Challand.  Software Engingeer</h1>
               <p class="intro-text">A full stack developer, primary back end development.
                 <br>C++, Python, Ruby, and Rails programmer</p>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
